--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,7 +12,7 @@
   background-color: white;
   background-image: url("../images/header_bg.png"), url(../images/developer.png);
   background-repeat: no-repeat;
-  background-position: bottom right, top left;
+  background-position: bottom right, left;
 }
 
 /* nav styles */
@@ -43,6 +43,7 @@ nav li {
   height: 64px;
   background-color: #fd6e0a;
   border: 0;
+  margin-left: 30px;
   border-radius: 5px;
   font-size: 20px;
   font-weight: bold;
@@ -60,6 +61,30 @@ nav li {
   align-items: center;
   margin-top: 0;
   margin-left: 200px;
+}
+
+.banner-subtitle {
+  color: #474747;
+  font-weight: 600;
+  font-size: 45px;
+  line-height: 61px;
+}
+
+.banner-title {
+  color: #181818;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 85px;
+}
+
+.banner-description {
+  color: #757575;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 /* main section */
@@ -122,11 +147,13 @@ td {
 .experience h1 {
   margin-bottom: 30px;
   font-size: 35px;
+  text-align: center;
 }
 
 .experience-description {
   margin-bottom: 50px;
   font-size: 18px;
+  text-align: center;
 }
 
 /* skill section */
@@ -141,10 +168,18 @@ td {
   background: #ffffff;
   box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
   border-radius: 5px;
+  padding: 30px;
 }
 
 .skill-title {
+  font-style: normal;
+  font-weight: 700;
   font-size: 20px;
+  color: #181818;
+  line-height: 28px;
+  text-align: left;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 .skill-description {
