--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -189,3 +189,99 @@ td {
   line-height: 28px;
   color: #757575;
 }
+
+/* resome section */
+
+.resome-container {
+  display: flex;
+  gap: 70px;
+}
+.summary {
+  font-weight: 700;
+  font-size: 35px;
+  color: black;
+}
+
+.resome-sub-container h1 {
+  color: #474747;
+  text-align: left;
+  font-size: 20px;
+}
+.content-container {
+  padding-bottom: 30px;
+}
+
+.content-container h2 {
+  color: #474747;
+  font-size: 25px;
+}
+.content-container h3 {
+  color: #757575;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.content-container p {
+  color: #757575;
+  font-size: 16px;
+}
+
+.cv-btn {
+  display: block;
+  margin-left: 60%;
+}
+/* bottom line class style  start*/
+.btm-line {
+  border-bottom: 1px solid #d1d1d1;
+}
+/* bottom line class style end */
+
+/* footer section */
+footer {
+  width: 100%;
+  height: 780px;
+  background: #fff8f3;
+}
+
+.footer-container {
+  display: flex;
+  gap: 110px;
+}
+.left-container {
+  width: 570px;
+  margin-left: 100px;
+  margin-top: 130px;
+}
+.left-container h1,
+.form-title {
+  color: #181818;
+  font-size: 35px;
+}
+
+.left-container p {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.icon {
+  display: flex;
+  gap: 30px;
+}
+
+form {
+  margin-top: 130px;
+  width: 60%;
+  padding: 30px;
+}
+
+#name,
+#email,
+#textarea {
+  margin-top: 24px;
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  border: none;
+}
