--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,6 +12,7 @@
   background-color: white;
   background-image: url("../images/header_bg.png"), url(../images/developer.png);
   background-repeat: no-repeat;
+  background-size: 80%, 8%;
   background-position: bottom right, left;
 }
 
@@ -19,7 +20,7 @@
 nav {
   display: flex;
   justify-content: space-between;
-  padding: 50px 200px;
+  padding: 20px 20px 0 200px;
 }
 
 nav ul {
@@ -35,7 +36,7 @@ nav li {
 
 .nav-title {
   font-weight: 800;
-  font-size: 45px;
+  font-size: 35px;
 }
 /* primary classes */
 .btn-primary {
@@ -62,11 +63,16 @@ nav li {
   margin-top: 0;
   margin-left: 200px;
 }
-
+.banner img {
+  width: 100%;
+}
+.btn-section {
+  display: flex;
+}
 .banner-subtitle {
   color: #474747;
   font-weight: 600;
-  font-size: 45px;
+  font-size: 40px;
   line-height: 61px;
 }
 
@@ -89,16 +95,16 @@ nav li {
 
 /* main section */
 main {
-  max-width: 1140px;
+  width: 80%;
   margin: 0 auto;
 }
 
 /* about section */
 .about {
-  margin-top: 130px;
+  margin-top: 100px;
   background: #fff8f3;
   border-radius: 10px;
-  padding: 130px 150px;
+  padding: 30px 50px;
   text-align: center;
 }
 
@@ -159,16 +165,16 @@ td {
 /* skill section */
 .skills-container {
   display: flex;
-  gap: 24px;
+  gap: 10px;
 }
 
 .skill {
-  width: 267px;
+  width: 300px;
   height: 377px;
   background: #ffffff;
   box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
   border-radius: 5px;
-  padding: 30px;
+  padding: 10px;
 }
 
 .skill-title {
@@ -284,4 +290,85 @@ form {
   padding: 10px;
   outline: none;
   border: none;
+}
+
+@media screen and (max-width: 576px) {
+  .skills-container,
+  .experience {
+    flex-direction: column;
+    width: 100%;
+  }
+  .experience,
+  .resome-container,
+  .header,
+  .banner,
+  .footer-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .header {
+    background-image: none;
+    background-color: #ffffff;
+  }
+  .banner {
+    margin: 0;
+    padding: 5px;
+  }
+  .skill,
+  .summary {
+    width: 100%;
+  }
+  nav {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: space-around;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+  }
+  ul {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
+  .rapper {
+    width: auto;
+  }
+  .content-container {
+    width: 100%;
+  }
+  .btn-primary {
+    width: auto;
+    height: auto;
+  }
+  .btn-primary {
+    padding: 5px;
+  }
+  .cv-btn {
+    display: block;
+    margin: 0 auto;
+  }
+  .about {
+    width: auto;
+  }
+
+  table {
+    display: none;
+  }
+  .left-container,
+  form {
+    width: auto;
+    margin: 0;
+    padding: 10px;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 992px) {
+}
+
+.hide {
+  display: none;
 }
